# deep-research-os

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
example_responses/: chip_design_research.md  japan_economy.md  twin_primes_solving.md
src/: app.py  config.py
src/core/: clients.py  logger.py  main.py
src/core/common/: llm_interface.py  logging.py
src/core/common/schemas/: __init__.py  research_cycle.py  user_query.py
src/core/evaluation/: __init__.py  critic.py  main.py
src/core/evaluation/prompts/: system.py  user.py
src/core/evaluation/schemas/: __init__.py  critic.py
src/core/report_generator/: __init__.py  choose_report_format.py  generate_report.py  main.py
src/core/report_generator/prompts/choose_report_format/: system.py  user.py
src/core/report_generator/prompts/generate_report/: __init__.py  system.py  user.py
src/core/report_generator/schemas/: __init__.py  common.py  decision_support.py  executive_briefing.py  general_information.py  market_intelligence.py  report_types.py  request.py  response.py  strategic_framework_report.py
src/core/research/: __init__.py  formatting.py  main.py  search.py  summary.py
src/core/research/prompts/: __init__.py  qa_system.py  qa_user.py
src/core/research/schemas/: __init__.py  question_answer.py  question_answer_pairs.py  question_request.py  search_request.py  search_response.py
src/core/search_planner/: __init__.py  main.py  planning.py
src/core/search_planner/prompts/: system.py  user.py
src/core/search_planner/schemas/: __init__.py  search_planning.py
