[project]
name = "lawrence-proactive-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.13.12",
    "exa>=0.5.26",
    "exa-py>=1.8.8",
    "fastapi[standard]>=0.115.7",
    "inngest>=0.4.18",
    "litellm>=1.60.8",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "rich>=13.9.4",
    "scalar-fastapi>=1.0.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
]
